# LocalMediaHub

./: .gitignore  AGENTS.md  README.md  build_native_libs.sh  gradlew  plan.md  settings.gradle.kts  start-server.bat
android/: build.gradle.kts  gradlew  gradlew.bat  settings.gradle.kts
android/app/: CMakeLists.txt  build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt
android/app/src/main/cpp/jni/: native_image_decoder.cpp  native_image_decoder.h
android/app/src/main/java/com/juziss/localmediahub/: MainActivity.kt
android/app/src/main/java/com/juziss/localmediahub/data/: FavoritesStore.kt  MediaRepository.kt  Models.kt  RecentActivityStore.kt  RoutePath.kt  ServerConfig.kt
android/app/src/main/java/com/juziss/localmediahub/native/: NativeImageDecoder.kt  (+1 more)
android/app/src/main/jniLibs/arm64-v8a/: BUILD_INSTRUCTIONS.md
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/xml/: ic_launcher.xml  network_security_config.xml
docs/superpowers/plans/: 2026-04-07-native-layer-optimization.md  2026-04-08-image-preview-scrollbar.md  final_optimization_plan.md  optimization_plan.md
docs/superpowers/specs/: 2026-04-07-native-layer-optimization-design.md  2026-04-08-image-preview-scrollbar-design.md
server/: .gitignore  config.example.yaml  config.py  config.yaml  go.mod  go.sum  main.py  mdns.py  models.py  requirements.txt  scanner.py  wails.json
server/api/: admin.py  folders.py  images.py  search.py  streaming.py  system.py  tags.py  thumbnails.py  videos.py
server/cmd/server/: main.go
server/frontend/: index.html  package.json  vite.config.js
server/frontend/src/: App.js  main.js  style.css
server/internal/config/: config.go  config_test.go
server/internal/gui/: gui.go
server/internal/mdns/: mdns.go
server/internal/models/: models.go
server/internal/server/: server.go  server_test.go
server/internal/server/handler/: admin.go  folders.go  folders_test.go  handler.go  images.go  media.go  path_suffix.go  path_suffix_test.go  root.go  search.go  search_test.go  system.go  tags.go  tags_test.go  videos.go
server/internal/server/middleware/: cors.go
server/internal/service/: path.go  path_test.go  scanner.go  streaming.go  tags.go  thumbnail.go
server/internal/systray/: systray.go
(+25 files in other folders)
